fix: METHOD_ARGUMENT_TYPE_MISMATCH, MESSAGE_NOT_READABLE 안쓰이고 있는 거 수정하기